# Lupusregina-

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  util.rs
src/anilist/: AnimeQuery.graphql  MangaQuery.graphql  schema.graphql
src/commands/: admin.rs  checks.rs  fun.rs  general.rs  mod.rs  moderation.rs  owner.rs  voice.rs  weeb.rs
src/commands/data/: bbconjunctions.txt  bbfillers.txt  bbtemplates.txt  ds1fillers.txt  ds1templates.txt  ds3conjunctions.txt  ds3fillers.txt  ds3templates.txt
