[package]
name = "lupusreginaβ"
version = "0.5.2"
authors = ["Ken Swenson <flat@esoteric.moe>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
base64 = "0.12"
chrono = "0.4"
directories = "~3.0"
dotenv = "~0.15"
rust-ini = "0.15"
typemap = "~0.3"
rand = "~0.7"
tempfile = "3"
graphql_client = "0.9"
serde = "1.0"
serde_json = "1.0"
tokio = "0.2.22"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.8"

[dependencies.sqlx]
version = "0.3.5"
default-features = false
features = ["sqlite", "runtime-tokio", "macros"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
#path = "../serenity"
features = ["framework", "standard_framework", "absolute_ratelimits", "rustls_backend", "voice"]

[dependencies.lavalink-rs]
#path = "../serenity-lavalink"
git = "https://gitlab.com/nitsuga5124/lavalink-rs/"
branch = "serenity_next"

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls", "json"]
