[package]
name = "lupusreginaβ"
version = "0.7.0"
authors = ["Ken Swenson <flat@esoteric.moe>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = "0.4"
directories = "4.0.1"
dotenv = "~0.15"
html2text = "0.4.4"
rust-ini = "0.18.0"
rand = "~0.8"
tempfile = "3"
graphql_client = "0.11.0"
serde = "1.0"
serde_json = "1.0"
substring = "1.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.16"
tracing-futures = "0.2"
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.14.1"

[dependencies.poise]
version = "0.4.1"
features = ["collector"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]
